<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place2Go</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add">Adicionar Lugar</string>
    <string name="Show">Mostrar Lugares</string>
    <string name="name_place">Nome:</string>
    <string name="city_place">Cidade:</string>
    <string name="state_place">Estado:</string>
    <string name="add_save">Salvar</string>
    
    <string name="list_name_place">Nome:</string>
    <string name="list_city_place">Cidade:</string>
    <string name="list_state_place">Estado</string>
    <string name="name">%1s</string>
    <string name="city">%1s</string>
    <string name="state">%1s</string>
    

</resources>