<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/slct_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

        <TextView
            android:id="@+id/slct_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

            <TextView
                android:id="@+id/slct_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state" />
                
                
        

</LinearLayout>